Add worker bundle

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -21,6 +21,12 @@ doctrine:
                 dir: '%kernel.project_dir%/src/Entity'
                 prefix: 'App\Entity'
                 alias: App
+            SoureCodeWorker:
+                is_bundle: false
+                type: attribute
+                dir: '%kernel.project_dir%/vendor/sourecode/worker-bundle/src/Entity'
+                prefix: 'SoureCode\Bundle\Worker\Entity'
+                alias: SoureCodeWorker
 
 when@test:
     doctrine:
