--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
         "ext-iconv": "*",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "easycorp/easyadmin-bundle": "^4.8",
-        "sourecode/worker-bundle": "^0.9.4",
+        "sourecode/worker-bundle": "^0.9.5",
         "symfony/console": "6.3.*",
         "symfony/doctrine-messenger": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.3.*",
         "symfony/messenger": "6.3.*",
+        "symfony/monolog-bundle": "^3.8",
         "symfony/runtime": "6.3.*",
         "symfony/yaml": "6.3.*"
     },
